--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -34,3 +34,16 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+  deploy:
+    needs: build
+    name: 'Deploy to production server'
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Deploy to Production Server'
+        uses: appleboy/ssh-action@master
+        with:
+        host: ${{ secrets.PROD_HOST }}
+        username: ${{ secrets.PROD_USERNAME }}
+        key: ${{ secrets.KEY }}
+        port: ${{ secrets.PORT }}
+        script: whoami
