--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -44,6 +44,5 @@ jobs:
         with:
           host: ${{ secrets.PROD_HOST }}
           username: ${{ secrets.PROD_USERNAME }}
-          key: ${{ secrets.KEY }}
+          key: ${{ secrets.PROD_KEY }}
           script: whoami
-          
