--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,4 +45,6 @@ jobs:
           host: ${{ secrets.PROD_HOST }}
           username: ${{ secrets.PROD_USERNAME }}
           key: ${{ secrets.PROD_KEY }}
-          script: whoami
+          script: |
+            cd ${{ secrets.PROD_PATH }}
+            ls -al
