--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -47,4 +47,4 @@ jobs:
           key: ${{ secrets.PROD_KEY }}
           script: |
             cd ${{ secrets.PROD_PATH }}
-            ls -al
+            docker-compose pull && docker-compose up -d
